[N/A] Fix toast time/action alignment (#135)

--- a/src/provider/view/components/NotificationCard/NotificationCard.scss
+++ b/src/provider/view/components/NotificationCard/NotificationCard.scss
@@ -22,6 +22,14 @@
         .text {
             max-height: $toast-max-height !important;
         }
+
+        .header {
+            padding-bottom: 9px !important;
+
+            .time {
+                top: 1px !important;
+            }
+        }
     }
 
     &.uninteractable {
